# llm-tap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: colored_petri_nets.md  petri_net_spec.md
examples/: simple_workflow.py
src/llm_tap/: __init__.py  llm.py  models.py  petri_nets.py  pn_spec.py
src/llm_tap/tests/: __init__.py  test_llm.py  test_models.py
tests/: test_petri_nets.py
